--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div class="goodFace__slider">
     <div class="container">
-      <div class="goodFace__slider-top">
-        <div class="slider-top__item">     
+      <div class="goodFace__slider-top" id="slider">
+        <div class="slider-top__item">
           <img src="img/01.svg" alt="">
           <p>2002</p>
         </div>
@@ -25,37 +25,86 @@
           <img src="img/03.png" alt="">
           <p>2004 — 2005</p>
         </div>
+        <div class="slider-top__item">
+          <img src="img/01.png" alt="">
+          <p>2002</p>
+        </div>
+        <div class="slider-top__item">
+          <img src="img/02.png" alt="">
+          <p>2003</p>
+        </div>
       </div>
-        <div class="goodFace__slider-bottom">
-          <div class="slider-bottom__item">
-            <!-- <div class="slider-bottom-text">
-              <h2>2002 рiк</h2>
-              <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
-                ullamco enim laboris.</p>
-            </div> -->
-            <img src="img/01.png" alt="">
+      <div class="goodFace__slider-bottom">
+        <div class="slider-bottom__item">
+          <div class="slider-bottom-image">
+            <img src="img/01big.png" alt="">
           </div>
-          <div class="slider-bottom__item">
-            <img src="img/02.png" alt="">
-          </div>
-          <div class="slider-bottom__item">
-            <img src="img/03.png" alt="">
+          <div class="slider-bottom-text">
+            <span class="slideCounter"></span>
+            <h2>2002 рiк</h2>
+            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+              ullamco enim laboris.</p>
           </div>
         </div>
-        <footer class="footer">
-          <div class="footer__title">
-            <h1>Цього року в Україні</h1>
+        <div class="slider-bottom__item">
+          <div class="slider-bottom-image">
+            <img src="img/02big.png" alt="">
           </div>
-          <div class="footer__text">
-            <p>Cillum consequat culpa cupidatat consectetur irure sint adipisicing dolor sint labore ipsum notrud
-              deserunt
-              elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
-              consequat est consectetur ipsum.</p>
+          <div class="slider-bottom-text">
+            <span class="slideCounter"></span>
+            <h2>2003 рiк</h2>
+            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+              ullamco enim laboris.</p>
           </div>
+        </div>
+        <div class="slider-bottom__item">
+          <div class="slider-bottom-image">
+            <img src="img/03.png" alt="">
+          </div>
+          <div class="slider-bottom-text">
+            <span class="slideCounter"></span>
+            <h2>2004 — 2005</h2>
+            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+              ullamco enim laboris.</p>
+          </div>
+        </div>
+        <div class="slider-bottom__item">
+          <div class="slider-bottom-image">
+            <img src="img/01big.png" alt="">
+          </div>
+          <div class="slider-bottom-text">
+            <span class="slideCounter"></span>
+            <h2>2002 рiк</h2>
+            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+              ullamco enim laboris.</p>
+          </div>
+        </div>
+        <div class="slider-bottom__item">
+          <div class="slider-bottom-image">
+            <img src="img/02big.png" alt="">
+          </div>
+          <div class="slider-bottom-text">
+            <span class="slideCounter"></span>
+            <h2>2003 рiк</h2>
+            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+              ullamco enim laboris.</p>
+          </div>
+        </div>
+      </div>
+      <footer class="footer">
+        <div class="footer__title">
+          <h1>Цього року в Україні</h1>
+        </div>
+        <div class="footer__text">
+          <p>Cillum consequat culpa cupidatat consectetur irure sint adipisicing dolor sint labore ipsum notrud
+            deserunt
+            elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
+            consequat est consectetur ipsum.</p>
+        </div>
       </footer>
     </div>
-    
-    </div>
+
+  </div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
