--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/style.min.css">
   <title>TZ</title>
@@ -12,82 +12,83 @@
 <body>
   <div class="goodFace__slider">
     <div class="container">
-      <div class="goodFace__slider-top" id="slider">
+      <span class="verticalLine"></span>
+      <div class="goodFace__slider-top">
         <div class="slider-top__item">
-          <img src="img/01.svg" alt="">
+          <img src="img/01.webp" alt="">
           <p>2002</p>
         </div>
         <div class="slider-top__item">
-          <img src="img/02.png" alt="">
+          <img src="img/02.webp" alt="">
           <p>2003</p>
         </div>
         <div class="slider-top__item">
-          <img src="img/03.png" alt="">
+          <img src="img/03.webp" alt="">
           <p>2004 — 2005</p>
         </div>
         <div class="slider-top__item">
-          <img src="img/01.png" alt="">
-          <p>2002</p>
+          <img src="img/04.webp" alt="">
+          <p>2020</p>
         </div>
         <div class="slider-top__item">
-          <img src="img/02.png" alt="">
-          <p>2003</p>
+          <img src="img/05.webp" alt="">
+          <p>2021+ </p>
         </div>
       </div>
       <div class="goodFace__slider-bottom">
         <div class="slider-bottom__item">
           <div class="slider-bottom-image">
-            <img src="img/01big.png" alt="">
+            <img src="img/01big.webp" alt="">
           </div>
           <div class="slider-bottom-text">
             <span class="slideCounter"></span>
             <h2>2002 рiк</h2>
-            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+            <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
         </div>
         <div class="slider-bottom__item">
           <div class="slider-bottom-image">
-            <img src="img/02big.png" alt="">
+            <img src="img/02big.webp" alt="">
           </div>
           <div class="slider-bottom-text">
             <span class="slideCounter"></span>
             <h2>2003 рiк</h2>
-            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+            <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
         </div>
         <div class="slider-bottom__item">
           <div class="slider-bottom-image">
-            <img src="img/03.png" alt="">
+            <img src="img/03.webp" alt="">
           </div>
           <div class="slider-bottom-text">
             <span class="slideCounter"></span>
             <h2>2004 — 2005</h2>
-            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+            <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
         </div>
         <div class="slider-bottom__item">
           <div class="slider-bottom-image">
-            <img src="img/01big.png" alt="">
+            <img src="img/04.webp" alt="">
           </div>
           <div class="slider-bottom-text">
             <span class="slideCounter"></span>
-            <h2>2002 рiк</h2>
-            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
+            <h2>2020 рiк</h2>
+            <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
         </div>
         <div class="slider-bottom__item">
           <div class="slider-bottom-image">
-            <img src="img/02big.png" alt="">
+            <img src="img/05.webp" alt="">
           </div>
           <div class="slider-bottom-text">
             <span class="slideCounter"></span>
-            <h2>2003 рiк</h2>
-            <p>Dolor ex ad aute fugiat. Nulla duis nostrud incididunt velit consectetur minim. Nisi consequat eu veniam
-              ullamco enim laboris.</p>
+            <h2>2021+ рiк</h2>
+            <p>The desire and dream to become a front-end developer is great. I would be glad if you give me a
+              opportunity.</p>
           </div>
         </div>
       </div>
@@ -96,11 +97,12 @@
           <h1>Цього року в Україні</h1>
         </div>
         <div class="footer__text">
-          <p>Cillum consequat culpa cupidatat consectetur irure sint adipisicing dolor sint labore ipsum notrud
+          <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
             deserunt
             elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
-            consequat est consectetur ipsum.</p>
+            consequat est consecetur ipsum.</p>
         </div>
+        <span class="footer slideCounter"></span>
       </footer>
     </div>
 
