--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
   <div class="goodFace__slider">
     <div class="container">
-      <span class="verticalLine"></span>
       <div class="goodFace__slider-top">
         <div class="slider-top__item">
           <img src="img/01.webp" alt="">
@@ -46,6 +45,16 @@
             <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
+          <div class="footer">
+            <div class="footer__title">
+              <h1>Цього року в Україні</h1>
+            </div>
+            <div class="footer__text">
+              <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
+                deserunt
+                elit. Elit sunt .</p>
+            </div>
+          </div>
         </div>
         <div class="slider-bottom__item">
           <div class="slider-bottom-image">
@@ -56,6 +65,18 @@
             <h2>2003 рiк</h2>
             <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
+          </div>
+          <div class="footer">
+            <div class="footer__title">
+              <h1>Цього року в Україні</h1>
+            </div>
+            <div class="footer__text">
+              <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
+                deserunt
+                elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
+                consequat est consecetur ipsum.</p>
+            </div>
+
           </div>
         </div>
         <div class="slider-bottom__item">
@@ -68,6 +89,20 @@
             <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
+          <div class="footer">
+            <div class="footer__title">
+              <h1>Цього року в Україні</h1>
+            </div>
+            <div class="footer__text">
+              <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
+                deserunt
+                elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
+                consequat est consecetur ipsum.minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in
+                veniam anim
+                consequat est consecetur ipsum</p>
+            </div>
+
+          </div>
         </div>
         <div class="slider-bottom__item">
           <div class="slider-bottom-image">
@@ -78,6 +113,20 @@
             <h2>2020 рiк</h2>
             <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
+          </div>
+          <div class="footer">
+            <div class="footer__title">
+              <h1>Цього року в Україні</h1>
+            </div>
+            <div class="footer__text">
+              <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
+                deserunt
+                elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
+                consequat est consecetur ipsumminim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in
+                veniam anim
+                consequat.</p>
+            </div>
+
           </div>
         </div>
         <div class="slider-bottom__item">
@@ -90,22 +139,22 @@
             <p>The desire and dream to become a front-end developer is great. I would be glad if you give me a
               opportunity.</p>
           </div>
+          <div class="footer">
+            <div class="footer__title">
+              <h1>Цього року в Україні</h1>
+            </div>
+            <div class="footer__text">
+              <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
+              </p>
+            </div>
+
+          </div>
         </div>
       </div>
       <footer class="footer">
-        <div class="footer__title">
-          <h1>Цього року в Україні</h1>
-        </div>
-        <div class="footer__text">
-          <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
-            deserunt
-            elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
-            consequat est consecetur ipsum.</p>
-        </div>
         <span class="footer slideCounter"></span>
       </footer>
     </div>
-
   </div>
   </div>
 
