--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
-          <div class="footer">
-            <div class="footer__title">
+          <div class="bottom">
+            <div class="bottom__title">
               <h1>Цього року в Україні</h1>
             </div>
-            <div class="footer__text">
+            <div class="bottom__text">
               <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
                 deserunt
                 elit. Elit sunt .</p>
@@ -66,11 +66,11 @@
             <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
-          <div class="footer">
-            <div class="footer__title">
+          <div class="bottom">
+            <div class="bottom__title">
               <h1>Цього року в Україні</h1>
             </div>
-            <div class="footer__text">
+            <div class="bottom__text">
               <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
                 deserunt
                 elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
@@ -89,11 +89,11 @@
             <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
-          <div class="footer">
-            <div class="footer__title">
+          <div class="bottom">
+            <div class="bottom__title">
               <h1>Цього року в Україні</h1>
             </div>
-            <div class="footer__text">
+            <div class="bottom__text">
               <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
                 deserunt
                 elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
@@ -114,11 +114,11 @@
             <p>Dolor ex ad aute fugiat. Nulla duis nosrtud incididunt velit consecetur minim. Nisi consequat eu veniam
               ullamco enim laboris.</p>
           </div>
-          <div class="footer">
-            <div class="footer__title">
+          <div class="bottom">
+            <div class="bottom__title">
               <h1>Цього року в Україні</h1>
             </div>
-            <div class="footer__text">
+            <div class="bottom__text">
               <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
                 deserunt
                 elit. Elit sunt minim magna nulla esse aliquip nulla. Nisi tempor culpa sint esse sint in veniam anim
@@ -139,11 +139,11 @@
             <p>The desire and dream to become a front-end developer is great. I would be glad if you give me a
               opportunity.</p>
           </div>
-          <div class="footer">
-            <div class="footer__title">
+          <div class="bottom">
+            <div class="bottom__title">
               <h1>Цього року в Україні</h1>
             </div>
-            <div class="footer__text">
+            <div class="bottom__text">
               <p>Cillum consequat culpa cupidatat consecetur irure sint adipisicing dolor sint labore ipsum notrud
               </p>
             </div>
